fix: duplicate sort input and unify filter UI

--- a/src/EventPlanning.Web/Views/Home/Index.cshtml
+++ b/src/EventPlanning.Web/Views/Home/Index.cshtml
@@ -54,7 +54,8 @@
                 ControllerName = "Home",
                 ActionName = "Index",
                 IsHeroOverlay = true,
-                SortOrder = ViewBag.CurrentSort
+                SortOrder = ViewBag.CurrentSort,
+                ShowSearch = true
             };
     }
     <partial name="_EventFilter" model="filterModel" />
