refactor: remove redundant search input from filter bar

--- a/src/EventPlanning.Web/Views/Event/MyEvents.cshtml
+++ b/src/EventPlanning.Web/Views/Event/MyEvents.cshtml
@@ -57,7 +57,7 @@
                 ActionName = "MyEvents",
                 ViewType = currentViewType,
                 SortOrder = ViewBag.CurrentSort,
-                ShowSearch = true
+                ShowSearch = false
             };
         }
         <partial name="_EventFilter" model="filterModel" />
