--- a/src/EventPlanning.Web/Views/Home/Index.cshtml
+++ b/src/EventPlanning.Web/Views/Home/Index.cshtml
@@ -55,7 +55,7 @@
                 ActionName = "Index",
                 IsHeroOverlay = true,
                 SortOrder = ViewBag.CurrentSort,
-                ShowSearch = true
+                ShowSearch = false
             };
     }
     <partial name="_EventFilter" model="filterModel" />
