--- a/src/EventPlanning.Web/Views/_ViewImports.cshtml
+++ b/src/EventPlanning.Web/Views/_ViewImports.cshtml
@@ -4,3 +4,4 @@
 @using EventPlanning.Application.DTOs
 @using EventPlanning.Application.DTOs.Event
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, EventPlanning.Web
