--- a/src/EventPlanning.Web/Views/Event/MyEvents.cshtml
+++ b/src/EventPlanning.Web/Views/Event/MyEvents.cshtml
@@ -7,7 +7,7 @@
 
     var currentViewType = ViewBag.CurrentViewType as string ?? "upcoming";
     var currentTypeEnum = ViewBag.CurrentType as EventType?;
-    var typeSelectList = currentTypeEnum.ToSelectList("All Categories");
+
 }
 
 <div class="container mt-5 mb-5">
@@ -43,24 +43,12 @@
         @{
             var fromDate = ViewBag.CurrentFrom as string != null ? DateTime.Parse(ViewBag.CurrentFrom) : (DateTime?)null;
             var toDate = ViewBag.CurrentTo as string != null ? DateTime.Parse(ViewBag.CurrentTo) : (DateTime?)null;
-
-            var filterModel = new EventPlanning.Web.Models.Shared.EventFilterViewModel
-            {
-                SearchTerm = ViewBag.CurrentSearch,
-                Type = currentTypeEnum,
-                From = fromDate,
-                To = toDate,
-                TypeOptions = typeSelectList,
-                HasFilters = ViewBag.CurrentSearch != null || ViewBag.CurrentType != null || ViewBag.CurrentFrom != null ||
-            ViewBag.CurrentTo != null,
-                ControllerName = "Event",
-                ActionName = "MyEvents",
-                ViewType = currentViewType,
-                SortOrder = ViewBag.CurrentSort,
-                ShowSearch = false
-            };
         }
-        <partial name="_EventFilter" model="filterModel" />
+
+        <vc:event-filter controller-name="Event" action-name="MyEvents" search-term="@ViewBag.CurrentSearch"
+            type="@currentTypeEnum" from="@fromDate" to="@toDate" sort-order="@ViewBag.CurrentSort"
+            view-type="@currentViewType" show-search="false">
+        </vc:event-filter>
     </div>
 
     @if (!Model.Items.Any())
