--- a/src/EventPlanning.Web/wwwroot/css/site.css
+++ b/src/EventPlanning.Web/wwwroot/css/site.css
@@ -8,6 +8,7 @@
 @import url('components/pagination.css');
 @import url('components/view-toggle.css');
 @import url('components/navbar.css');
+@import url('components/filter-bar.css');
 @import url('components/hero.css');
 @import url('components/footer.css');
 
